<resources>
    <string name="app_name">Dvote</string>
    <string name="transperency">Transperency</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_pin">create a pin code</string>
    <string name="login">login</string>
    <string name="signup">signup</string>
    <string name="logout">Logout</string>
    <string name="language">language</string>
    <string name="menu_one">Settings</string>
    <string name="menu_two">About</string>
    <string name="menu_three">Language</string>
    <string name="title_activity_home">home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="create_election">Create Election</string>
    <string name="update_election">Update Election</string>
    <string name="view_elections">View Elections</string>
    <string name="my_elections">My Elections</string>
    <string name="class_president">Class President</string>
    <string name="lorem_ipsum"> DESCRIPTION \n Lorem ipsum dolor sit amet, consectetuer adipiscing elit. In convallis. Morbi imperdiet, mauris ac auctor dictum, nisl ligula egestas nulla, et sollicitudin sem purus in lacus. Nulla turpis magna, cursus sit amet, suscipit a, interdum id, felis. Fusce suscipit libero eget elit. Maecenas sollicitudin. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Nullam sit amet magna in magna gravida vehicula.</string>
    <string name="desc"> Head of the mentioned honourable sections for the classes admitted for the exams ...........</string>
    <string name="candidate">Candidate</string>
    <string name="describtion">Description</string>
    <string name="vote">vote</string>
    <string name="name">Name</string>
    <string name="_452">452</string>
    <string name="add_name">Add Name</string>
    <string name="pool_type">Private Pool</string>
    <string name="_2027_20_14">2027–20-14</string>
    <string name="create_elsction">Create Election</string>
    <string name="organisation">Organisation</string>
    <string name="option_1">Option 1</string>
    <string name="post">Post</string>
    <string name="_private">Private</string>
    <string name="_public">Public</string>
    <string name="election_title">Enter Election Title</string>
    <string name="logo">Logo</string>
    <string name="_election_title">Election Title</string>
    <string name="oraganisation">Oraganisation</string>
    <string name="number_of_candidate_5">number of candidate: 5</string>
    <string name="class_President">Class president</string>
    <string name="voting_dapp">Voting Dapp</string>
    <string name="votingdapp_gmail_com">votingDapp@gmail.com</string>
    <string name="cast_vote">Cast Vote</string>
    <string name="block_chain_id">Block Chain ID</string>
    <string name="further_works">FURTHER WORKS</string>
</resources>