<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="nav_view">
    <group>
        <item
            android:id="@+id/requestid"
            android:icon="@drawable/id_24"
            app:showAsAction="never"
            android:title="@string/block_chain_id" />
        <item
            android:id="@+id/action_about"
            android:icon="@drawable/baseline_language_24"
            app:showAsAction="never"
            android:title="@string/menu_two" />
        <item
            android:id="@+id/language"
            android:icon="@drawable/baseline_read_more_24"
            app:showAsAction="never"
            android:title="@string/menu_three" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/baseline_keyboard_backspace_24"
            app:showAsAction="never"
            android:title="@string/logout" />
    </group>


</menu>
