<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fabric_gateway.activity.vote">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/transperency"
        android:src="@drawable/baseline_keyboard_arrow_left_24"
        app:backgroundTint="@color/white"
        app:iconGravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/etitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:drawableTint="@color/prime_blue"
        android:text="@string/class_president"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintLeft_toRightOf="@+id/back_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="m" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="280.45dp"
        android:clipToPadding="false"
        android:padding="8dp"
        android:scrollbars="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/etitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/about"/>


    <TextView
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/describtion"
        android:textColor="#B3000000"
        android:textSize="24sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/recycler"
        app:layout_constraintBottom_toTopOf="@id/lorem_ipsum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lorem_ipsum"
        android:layout_width="354dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal|top"
        android:text="@string/desc"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cast_vote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/transperency"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:text="@string/cast_vote"
        app:backgroundTint="@color/primary_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>