<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_square"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/election_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_President"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="23sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@id/number_of_candidates"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/number_of_candidates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_candidate_5"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/election_title"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/get_election"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:contentDescription="@string/transperency"
        android:src="@drawable/baseline_keyboard_arrow_right_24"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>