<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="170dp"
        android:layout_height="238.45dp"
        android:layout_margin="10dp"
        android:background="@color/black"
        android:contentDescription="@string/candidate"
        android:src="@drawable/candidate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/card"
        app:layout_constraintRight_toRightOf="@id/imageView2"
        app:layout_constraintTop_toTopOf="@id/imageView2" />

    <CheckBox
        android:id="@+id/number_of_votes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintRight_toRightOf="@id/imageView2"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="-25dp"
        android:background="?attr/selectableItemBackground"
        android:backgroundTint="@color/primary_blue"
        android:foregroundGravity="center"
        app:cardCornerRadius="7dp"
        app:cardElevation="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/vote"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:backgroundTint="@color/primary_blue"
            android:gravity="center"
            android:text="@string/vote"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>